# intersection-rs

./: Cargo.toml  README.md  build.rs
include/: intersection_algos.cpp  intersection_algos.hpp  util.cpp  util.hpp
src/: intersect.rs  lib.rs  simd_intersection.rs  simd_intersection_new.rs
