[package]
name = "intersection"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = ["cxx"]

[dependencies]
cxx = { version = "1.0.65", optional = true }
mediumvec = { git = "https://github.com/zhengyi-yang/mediumvec.git" }
lazy_static = "1.4.0"

[build-dependencies]
cxx-build = "1.0.65"
