[package]
name = "intersection"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
simd = ["cxx"]
simd_new = ["setops"]

[dependencies]
cxx = { version = "1.0.83", optional = true }
setops = {git = "https://github.com/UNSW-database/simd_set_operations", optional = true}
lazy_static = "1.4.0"

[build-dependencies]
cxx-build = "1.0.83"
